--- a/src/i18n/en/en.json
+++ b/src/i18n/en/en.json
@@ -355,12 +355,14 @@
     },
 
     "invoiceStatus": {
+      "total": "Total",
       "unpaid": "Unpaid",
       "restored": "Restored",
       "paid": "Paid",
       "overdue": "Overdue",
       "cancelled": "Cancelled",
       "waitingPayment": "Waiting for payment",
+      "cannotBePaid": "Cannot Be Paid",
       "restore": "Restore"
     },
 
@@ -545,7 +547,6 @@
       "floorId": "Floor:",
       "acreage": "Acreage (m²):",
       "price": "Price (VND):",
-
       "maximumPeople": "Maximum people:",
       "roomType": "Room type:",
       "status": "Status:",
@@ -708,7 +709,6 @@
       "maxPrice": "To",
       "search": "Search"
     },
-
     "addOrUpdate": {
       "name": "Service Name:",
       "placeholderName": "Cleaning",
@@ -872,7 +872,6 @@
       "placeholderVehicle": "-- Select vehicle --",
       "placeholderStatus": "-- Status --"
     },
-
     "response": {
       "contractCode": "Contract Code",
       "actions": "Actions",
@@ -887,7 +886,6 @@
       "createdAt": "Created At",
       "updatedAt": "Updated At"
     },
-
     "addOrUpdate": {
       "titleAdd": "Add Contract",
       "titleUpdate": "Update Contract",
@@ -1014,6 +1012,265 @@
     },
     "placeholder": {
       "meter": "-- Select meter --"
+    }
+  },
+  "paymentReceipt": {
+    "title": "Payment Receipt",
+    "titleHistory": "Deleted Payment Receipt History",
+    "statistic": "Payment Receipt Statistics",
+    "search": "Receipt Code/Invoice Code",
+    "errorFetch": "An error occurred while loading payment receipts.",
+    "errorFetchStatistics": "An error occurred while loading payment receipt statistics.",
+    "invoiceId": "Invoice ID",
+    "response": {
+      "receiptCode": "Receipt Code",
+      "invoiceCode": "Invoice Code",
+      "amount": "Amount",
+      "paymentMethod": "Payment Method",
+      "paymentStatus": "Payment Status",
+      "collectedBy": "Collected By",
+      "paymentDate": "Payment Date",
+      "note": "Note",
+      "createdAt": "Created At",
+      "updatedAt": "Updated At",
+      "actions": "Actions",
+      "invoiceId": "Invoice ID"
+    },
+    "filter": {
+      "labelPaymentMethod": "Payment Method",
+      "labelPaymentStatus": "Payment Status",
+      "labelFromAmount": "From Amount",
+      "labelToAmount": "To Amount",
+      "labelQuery": "Search",
+      "placeholderPaymentMethod": "-- Payment Method --",
+      "placeholderPaymentStatus": "-- Payment Status --",
+      "placeholderFromAmount": "From Amount",
+      "placeholderToAmount": "To Amount",
+      "placeholderQuery": "Search"
+    },
+    "dialog": {
+      "delete": {
+        "desc": "This action will permanently delete the selected payment receipts. Are you sure you want to continue?",
+        "success": "Payment receipts deleted successfully"
+      },
+      "sendNotice": {
+        "desc": "This action will create a payment receipt. Are you sure you want to continue?",
+        "success": "Payment receipt created successfully"
+      }
+    },
+    "export": {
+      "fileName": "Payment Receipt",
+      "headers": {
+        "receiptCode": "Receipt Code",
+        "invoiceCode": "Invoice Code",
+        "amount": "Amount",
+        "paymentMethod": "Payment Method",
+        "paymentStatus": "Payment Status",
+        "collectedBy": "Collected By",
+        "paymentDate": "Payment Date",
+        "note": "Note",
+        "createdAt": "Created At",
+        "updatedAt": "Updated At"
+      }
+    }
+  },
+  "deposit": {
+    "title": "Deposit",
+    "titleHistory": "Deleted deposit history",
+    "statistic": "Deposit statistics",
+    "search": "Contract code/Room code/Depositor",
+    "errorFetch": "An error occurred while fetching deposits.",
+    "errorFetchStatistics": "An error occurred while fetching deposit statistics.",
+    "successRefund": "Customer deposit refunded successfully",
+    "response": {
+      "id": "Deposit ID",
+      "contractCode": "Contract code",
+      "roomCode": "Room code",
+      "depositor": "Depositor",
+      "depositRecipient": "Deposit recipient",
+      "depositAmount": "Deposit amount",
+      "depositStatus": "Deposit status",
+      "depositDate": "Deposit date",
+      "depositRefundDate": "Refund date",
+      "securityDepositReturnDate": "Security deposit return date",
+      "note": "Note",
+      "createdAt": "Created at",
+      "updatedAt": "Updated at",
+      "actions": "Actions",
+      "contractId": "contract ID"
+    },
+    "filter": {
+      "placeholderStatus": "-- Deposit status --",
+      "labelStatus": "Deposit status",
+      "placeholderSearch": "Search"
+    }
+  },
+  "invoice": {
+    "title": "Invoice",
+    "titleHistory": "Deleted Invoice History",
+    "statistic": "Invoice Statistics",
+    "search": "Invoice Code/Name",
+    "errorFetch": "An error occurred while fetching invoices.",
+    "errorFetchStatistics": "An error occurred while fetching invoice statistics.",
+    "contract": "Create contract invoice",
+    "building": "Create building invoice",
+    "updateTitle": "Update Invoice",
+    "rejectSuccess": "Payment rejection successful",
+    "Payment": "Payment confirmed ",
+    "success": "successfully",
+    "last": "?",
+    "response": {
+      "invoiceCode": "Invoice Code",
+      "building": "Building",
+      "floor": "Floor",
+      "room": "Room",
+      "contract": "Contract",
+      "invoiceType": "Invoice Type",
+      "invoiceStatus": "Invoice Status",
+      "month": "Month",
+      "year": "Year",
+      "tenantName": "Tenant Name",
+      "totalAmount": "Total Amount",
+      "paymentDueDate": "Payment Due Date",
+      "note": "Note",
+      "createdAt": "Created At",
+      "updatedAt": "Updated At",
+      "actions": "Actions"
+    },
+    "filter": {
+      "placeholderBuilding": "-- Building --",
+      "placeholderFloor": "-- Floor --",
+      "placeholderStatus": "-- Invoice Status --",
+      "placeholderType": "-- Invoice Type --",
+      "labelMonth": "Month",
+      "labelYear": "Year",
+      "placeholderMonth": "Enter month (1-12)",
+      "placeholderYear": "Enter year",
+      "placeholderQuery": "Search",
+      "placeholderMinTotalAmount": "Price from",
+      "placeholderMaxTotalAmount": "Price to"
+    },
+    "addOrUpdate": {
+      "building": "Building",
+      "floor": "Floor",
+      "contract": "Contract",
+      "invoiceType": "Invoice Type",
+      "invoiceStatus": "Invoice Status",
+      "paymentDueDate": "Payment Due Date",
+      "note": "Note",
+      "notePlaceholder": "Enter note",
+      "placeholderItemType": "-- Select invoice item type --",
+      "labelItemType": "Invoice Item Type:",
+      "placeholderServiceRoom": "-- Select service room --",
+      "labelServiceRoom": "Service Room:",
+      "newIndex": "New Index:",
+      "quantity": "Quantity:",
+      "unitPrice": "Unit Price:",
+      "placeholderDescription": "Enter description",
+      "labelDescription": "Description:"
+    },
+    "add": {
+      "placeholderContract": "-- Select contract --",
+      "labelContract": "Contract:",
+      "placeholderBuilding": "-- Select building --",
+      "labelBuilding": "Building:",
+      "placeholderFloor": "-- Select floor --",
+      "labelFloor": "Floor:",
+      "labelPaymentDueDate": "Payment Due Date:",
+      "placeholderNote": "Enter note",
+      "labelNote": "Note:"
+    },
+    "payment": {
+      "invalidMethod": "Invalid payment method",
+      "title": "Payment by bank transfer",
+      "totalAmount": "Total amount",
+      "guideTitle": "Follow the steps below to complete the payment:",
+      "step1": {
+        "title": "Step 1:",
+        "desc": "Open your bank's Mobile Banking app"
+      },
+      "step2": {
+        "title": "Step 2:",
+        "desc": "Select \"Payment\" and scan the QR code in this guide"
+      },
+      "step3": {
+        "title": "Step 3:",
+        "desc": "Enter the amount {{amount}} and payment content {{method}} - {{note}}"
+      },
+      "step4": {
+        "title": "Step 4:",
+        "desc": "Complete the payment steps as instructed and wait for landlord confirmation"
+      },
+      "accountName": "Account name",
+      "accountNumber": "Account number",
+      "warning": "The QR code is only valid for this payment. Do not save or reuse it for future payments."
+    },
+    "detail": {
+      "title": "Invoice Detail",
+      "addTitle": "Add Invoice Detail",
+      "updateTitle": "Update Invoice Detail",
+
+      "tenantInfo": "Tenant Information",
+      "roomCode": "Room",
+      "buildingName": "Building Name",
+      "tenantName": "Representative Tenant",
+      "tenantPhone": "Phone Number",
+
+      "invoiceInfo": "Invoice Information",
+      "invoiceCode": "Invoice Code",
+      "invoiceType": "Invoice Type",
+      "period": "Invoice Period",
+      "totalAmount": "Total Amount",
+      "paymentDueDate": "Payment Due Date",
+      "invoiceStatus": "Status",
+
+      "loading": "Loading invoice details...",
+      "download": "Download Invoice",
+      "customer": "Customer",
+      "date": "Date",
+      "dueDate": "Due Date",
+      "note": "Note",
+      "inWords": "In Words",
+      "free": "Free",
+      "invoiceFor": "Invoice for",
+
+      "table": {
+        "index": "No.",
+        "serviceName": "Service Name",
+        "serviceCategory": "Service Category",
+        "serviceCalculation": "Service Calculation",
+        "unit": "Unit",
+        "oldIndex": "Old Index",
+        "newIndex": "New Index",
+        "quantity": "Quantity",
+        "unitPrice": "Unit Price",
+        "amount": "Amount"
+      },
+
+      "modal": {
+        "rejectTitle": "Reason for Payment Rejection",
+        "rejectLabel": "Reason for payment rejection:",
+        "rejectPlaceholder": "Enter reason",
+        "paymentTitle": "Select Payment Method"
+      },
+
+      "button": {
+        "reject": "Reject Payment",
+        "confirmPayment": "Confirm Payment"
+      },
+
+      "toast": {
+        "missingInvoice": "Invoice code is missing",
+        "loadError": "An error occurred while loading invoice details",
+        "rejectSuccess": "Payment rejected successfully"
+      }
+    },
+
+    "error": {
+      "noInvoiceId": "No invoice ID found",
+      "noRoomId": "No room ID found, please try again",
+      "fetchInvoice": "An error occurred while loading invoice details",
+      "fetchServiceRoom": "An error occurred while loading room services"
     }
   }
 }
