feat: add new btn change meter

--- a/src/i18n/en/en.json
+++ b/src/i18n/en/en.json
@@ -932,6 +932,7 @@
     }
   },
   "meter": {
+    "changeBtn": "Change meter",
     "viewNoMeter": "View room without meter",
     "noMeter": "Number of rooms without meter",
     "title": "Meter",
