--- a/src/i18n/en/en.json
+++ b/src/i18n/en/en.json
@@ -440,6 +440,14 @@
     "nonRefund": "Non-refundable",
     "cancelled": "Cancelled"
   },
+  "changePass": {
+    "oldPassword": "Old Password:",
+    "placeholderOldPassword": "Enter old password",
+    "newPassword": "New Password:",
+    "placeholderNewPassword": "Enter new password",
+    "reNewPassword": "Confirm New Password:",
+    "placeholderReNewPassword": "Re-enter new password"
+  },
   "building": {
     "title": "Building",
     "titleHistory": "Building deletion history",
